--- a/seo-style.css
+++ b/seo-style.css
@@ -1,29 +1,33 @@
 body {
   font-family: "Segoe UI", Arial, sans-serif;
-  background: #f7f9fb;
+  background: white;
   margin: 0;
-  padding: 20px;
-  width: 500px;
+  padding-inline: 20px;
+  width: 600px;
   color: #333;
 }
 
-.audit-container {
-  background: #fff;
-  border-radius: 12px;
-  padding: 20px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+body::-webkit-scrollbar{
+  width: 0;
 }
 
-h3 {
-  margin-top: 0;
+/* Header */
+.header-box{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.header-box h3 {
+  width: 100%;
   font-size: 20px;
-  color: #2E86DE;
-  border-bottom: 2px solid #f0f0f0;
-  padding-bottom: 10px;
+  color: #21354e;
 }
 
-button {
-  background: #2E86DE;
+.header-box button {
+  background: #fa6b48;
   color: #fff;
   border: none;
   border-radius: 8px;
@@ -32,11 +36,18 @@ button {
   font-size: 16px;
   cursor: pointer;
   transition: 0.3s ease;
-  margin: 10px 0 20px 0;
+  margin: 10px 0 10px 0;
 }
 
-button:hover {
-  background: #1b4f9c;
+.header-box button:hover {
+  background: #d44926;
+}
+
+/* Content */
+.result-container.show{
+  padding-block: 20p;
+  border-top: 2px solid rgba(0, 0, 0, 0.3);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 }
 
 .score {
@@ -46,13 +57,13 @@ button:hover {
   margin-bottom: 10px;
 }
 
-ul {
+.seo-mistake {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-ul li {
+.seo-mistake li {
   background: #f9f9f9;
   margin: 6px 0;
   padding: 10px 12px;
@@ -60,3 +71,14 @@ ul li {
   border-radius: 6px;
   font-size: 14px;
 }
+
+.result-section {
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.result-section h4 { margin: 0 0 5px 0; }
+.good { color: green; }
+.bad { color: red; }
