--- a/css/seo-style.css
+++ b/css/seo-style.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   padding-inline: 20px;
   width: 600px;
+  height: 100%;
+  min-height: 100px;
   color: #333;
 }
 
@@ -13,41 +15,63 @@ body::-webkit-scrollbar{
 
 /* Header */
 .header-box{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  background: white;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
-  gap: 20px;
+  justify-content: space-between;
+  padding-inline: 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+  gap: 15px;
 }
 
-.header-box h3 {
+.header-box img{
   width: 100%;
-  font-size: 20px;
+  height: auto;
+  max-width: 70px;
+}
+
+/* Navbar */
+.navcontent { 
+  display: none; 
+}
+
+.navcontent.active { 
+  display: block; 
+}
+
+.navbar { 
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.navbar .navlink {
+  padding: 8px 12px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 700;
   color: #21354e;
 }
 
-.header-box button {
+.navlink.active { 
   background: #fa6b48;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  padding: 14px 18px;
-  width: 100%;
-  font-size: 16px;
-  cursor: pointer;
-  transition: 0.3s ease;
-  margin: 10px 0 10px 0;
+  color: white;
 }
 
-.header-box button:hover {
-  background: #d44926;
-}
-
-/* Content */
-.result-container.show{
-  padding-block: 20p;
-  border-top: 2px solid rgba(0, 0, 0, 0.3);
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+/* Result Content */
+.result-container{
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .score {
@@ -82,3 +106,59 @@ body::-webkit-scrollbar{
 .result-section h4 { margin: 0 0 5px 0; }
 .good { color: green; }
 .bad { color: red; }
+
+/* Result Heading - Links - Image Counter */
+.result-section-heading{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  background: #fa6b48;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 25px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  gap: 15px;
+}
+
+.result-section-heading .left-content{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 30%;
+}
+
+.result-section-heading .right-content{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 70%;
+  gap: 20px;
+}
+
+.result-section-heading .counter-box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.result-section-heading .counter-box h3{
+  margin: 0;
+  color: white;
+  font-size: 16px;
+}
+
+.result-section-heading .counter-box p{
+  margin: 0;
+  color: white;
+  font-size: 18px;
+}
