--- a/css/seo-style.css
+++ b/css/seo-style.css
@@ -13,6 +13,20 @@ body::-webkit-scrollbar{
   width: 0;
 }
 
+.page-break {
+  page-break-before: always;
+}
+
+#downloadPdfBtn{
+  background: #21354e;
+  color: white;
+  border: none;
+  padding: 15px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
 /* Header */
 .header-box{
   position: fixed;
